tests/test_files_pa3/SemanticErrors/ClassGraphError.ic

class A{static void main(string[] args){}}

class B extends A{}

class C extends G{}

class D {}

class E extends C{}

class F extends E{}

class G extends F{}

